0.6final?